After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706345 - GtkExpander's click-and-drag behavior should match that of GtkButton
GtkExpander's click-and-drag behavior should match that of GtkButton
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
3.8.x
Other All
: Normal minor
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-08-20 00:00 UTC by Philip Chimento
Modified: 2013-09-17 02:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch that fixes the problem (1.10 KB, patch)
2013-08-22 05:08 UTC, Philip Chimento
committed Details | Review

Description Philip Chimento 2013-08-20 00:00:52 UTC
When you click and hold on a GtkExpander's label or disclosure triangle, then drag the mouse elsewhere and release, the expander still expands or unexpands (exactly as if you had simply clicked on the label.)

This behavior is different from GtkButton's behavior and the behavior of expanders in other UIs; if you click and hold on a GtkButton, then drag the mouse off the button, and release, then the button is not clicked.

To reproduce:

- Run gtk3-demo
- Run the "Expander" demo
- Position the mouse on "Details", click and hold the left mouse button
- Move the mouse elsewhere (e.g. off the GtkExpander window) so that the prelight state of "Details" disappears
- Release the mouse button
- The string "Details can be shown or hidden" is revealed

Doing the same thing on the "Close" button in the same demo shows the expected behavior.
Comment 1 Philip Chimento 2013-08-22 05:08:10 UTC
Created attachment 252694 [details] [review]
Patch that fixes the problem